fix static image

--- a/content/posts/25-06-19-flops.md
+++ b/content/posts/25-06-19-flops.md
@@ -61,7 +61,7 @@ ___
       - 35-55% common for llm training and inference
       - in practice, even with trillions of available FLOPs/sec, real-world usage might hit only 20–50%
 
-  ![PaLM's Model FLOPs Utilization across different model sizes](/content/images/mfu_palm_table.png)
+  ![PaLM's Model FLOPs Utilization across different model sizes](/images/mfu_palm_table.png)
     _table source: https://arxiv.org/abs/2204.02311_
 
 - how to interpret FLOP utilization rate?
