--- a/content/posts/25-06-19-flops.md
+++ b/content/posts/25-06-19-flops.md
@@ -6,9 +6,6 @@ weight: 1
 aliases: ["/papermod-installation"]
 tags: ["flops", "inference", "training"]
 author: ["Tanvi Bhandarkar"]
-cover:
-  image: images/papermod-cover.png
-  hiddenInList: true
 ---
 Lately, I've been low-key obessed with [SemiAnalysis](https://semianalysis.com/2023/07/10/gpt-4-architecture-infrastructure/#:~:text=It%20shows%20that%20even%208x%20H100%20cannot%20serve%20a%201%20trillion%20parameter%20dense%20model%20at%2033.33%20tokens%20per%20second.%20Furthermore%2C%20the%20FLOPS%20utilization%20rate%20of%20the%208xH100%E2%80%99s%20at%2020%20tokens%20per%20second%20would%20still%20be%20under%205%25%2C%20resulting%20is%20horribly%20high%20inference%20costs.) articles, and one in particular made me pause:
 
@@ -17,7 +14,7 @@ Lately, I've been low-key obessed with [SemiAnalysis](https://semianalysis.com/2
 While the claim is from 2023 and inference is *still* largely memory-bandwidth-bound, the hardware game has evovled since then. Newer GPUs like NVIDIA H200s, B200s and GB300 have dramatically raised the capabilities and ultra-scale inference platforms (think Blackwell Ultra and Cerebas) now support dense models well over trillion params at user-serving latencies of ~1000 toks/s. 
 
 But what really caught my eye was the under utilized rate of these modern GPUs. Around the same time, I briefly read [How to Scale Your Model](https://jax-ml.github.io/scaling-book/#high-level-outline:~:text=We%20strongly%20believe,in%20each%20part.), which emphasized:
-> *We strongly believe it’s worth understanding every piece of the Transformer architecture: the exact sizes of every matrix, where normalization occurs, how many parameters and FLOPs4 are in each part.*
+> *We strongly believe it’s worth understanding every piece of the Transformer architecture: the exact sizes of every matrix, where normalization occurs, how many parameters and FLOPs are in each part.*
 
 This prompted me to question how I’ve been thinking about FLOPs and learn beyond the obvious definition I understand it with!
 ___
@@ -71,17 +68,20 @@ ___
     - memory/bandwidth bottlenecks
       - llms have billions of params that has to be loaded from memory into compute units for calculations
       - when memory doesn't supply data fast enough, compute units sit idle
-  - communication overhead
-    - in distributed training/inference, data shuffling across GPUs add latency
-  - smaller batch size 
-    - inference is often single-user request, where the operations might not be large enough to fully saturate the GPU's parallel processing capabilities 
-    - less parallelism means low FLOPs usage
  
 - why is the utilization rate often low?
   - compute units wait on weights or KV-cache to be loaded → utilization drops
   - autoregressive decoding is inherently sequential → limits parallelism
-  - inference is often done in small batches (vs large-batch training) → underutilizes parallel hardware
+  - inference is often done in small batches (vs large-batch training) i.e. often single-user request → underutilizes parallel hardware
+    - tangent: core problem of inference is being "memory bandwidth-bound"! lets briefly understand this infamous state of llm during inference
+      - to generate a single token, the model must perform a forward pass through its entire network (think all the params in all the layers)
+      - step 1: gpu must load the model's parameters (weights) from its High Bandwidth Memory (HBM) into the on-chip SRAM of its processing cores
+      - step 2: then perform calculations (mostly matrix-vector multiplications) using these weights and send back the results
+      - for a "dense" model, almost all parameters are used for every single token generated that makes step 1 vastly slower (shuffling of data between memory and processors) than step 2 on modern hardware 
+      - the processors are so fast they finish their calculations and are then left idle, waiting for the next batch of weights to arrive from HBM
+    - less parallelism means low FLOPs usage
   - load imbalance in sparse models or MoEs
+
 - how to get better utilization?
   - batch requests during inference, e.g. for retireval or batched chatbot responses to utilize parallelism
   - quantization (fp8, fp6, fp4 formats) reduces memory footprint and bandwidth pressure
